here I come, I come, I come

--- a/Housing.html
+++ b/Housing.html
@@ -67,9 +67,21 @@ img{
 <td class="border">
 <ul class="list-group"><li  class="list-group-item">Practically Anywhere</li><li  class="list-group-item">Anytime</li><li  class="list-group-item">always somewhere to go</li></ul></td>
 
-<td class="border"> <li class="list-group-item">All utilites covered by reservation<br>Only worry about <em>car payment/insurance and food expenses</td>
-
-<td class="border"><ul class="list-group"> <li  class="list-group-item">price fluctuation inconsistant, most want you out under 30 days (1940.1) and will choose to not look past anything that may be agaist their rules in order to "evict" you </li><li  class="list-group-item">multiple moves have stressed Tom and I out beyond what is necessary.</li><li  class="list-group-item"> Re-reserving a room is stressfull when I am dependant on someone else for financial assistance.</li><li  class="list-group-item">not knowing how many days I can book in advance to save money.</li><li  class="list-group-item">significantly more expensive option.</li></ul></td>
+    <td class="border">
+        <li class="list-group-item">All utilites covered by reservation<br>Only worry about <em>car payment/insurance
+            and food expenses
+            <ul class="list-group">
+                <li class="list-group-item">price fluctuation inconsistant, most want you out under 30 days (1940.1) and
+                    will choose to not look past anything that may be agaist their rules in order to "evict" you
+                </li>
+                <li class="list-group-item">multiple moves have stressed Tom and I out beyond what is necessary.</li>
+                <li class="list-group-item"> Re-reserving a room is stressfull when I am dependant on someone else for
+                    financial assistance.
+                </li>
+                <li class="list-group-item">not knowing how many days I can book in advance to save money.</li>
+                <li class="list-group-item">significantly more expensive option.</li>
+            </ul>
+    </td>
 
 
 </tr>
