here I come, I come, I come

--- a/Housing.html
+++ b/Housing.html
@@ -69,7 +69,7 @@ img{
 
     <td class="border">
         <li class="list-group-item">All utilites covered by reservation<br>Only worry about <em>car payment/insurance
-            and food expenses
+            and food expenses</em></li>
             <ul class="list-group">
                 <li class="list-group-item">price fluctuation inconsistant, most want you out under 30 days (1940.1) and
                     will choose to not look past anything that may be agaist their rules in order to "evict" you
