here I come, I come, I come

--- a/index.html
+++ b/index.html
@@ -21,28 +21,14 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <style>
-      li,
-      p,
-      div,
-      td {
-        font-family: "Fredoka One";
-      }
+    <link rel="stylesheet" href="main.css" />
 
-      th {
-        font-size: 1.75rem;
-        font-family: "Sigmar One", monospace;
-      }
-      img {
-        width: 100%;
-      }
-    </style>
     <title>Considering the Options</title>
   </head>
   <body class="text-monospace">
     <div class="mb-0 jumbotron jumbotron-fluid bg-dark">
       <div class="container">
-        <h1 class="display-4 text-light">Housing Options</h1>
+        <h1 class="display-3 text-light jumbotitle">Housing Options</h1>
         <p class="lead text-white">
           Below are some of the options available for housing by my estimation..
         </p>
@@ -227,7 +213,9 @@
             <li class="list-group-item">
               I think living with Grandma will remove obstacles that, frankly
               shouldn't have been there, thus financial indiependance would be
-              more attainable, because:<br />1) I have PTSD and I am done
+                more attainable, because:
+            </li><li class="list-group-item">
+                I have PTSD and I am done
               feeling like I am obligated to "proove" this, which was
               heart-breaking for me to accept and added even more weight to my
               depression and the loss of trust I have for family and, by proxy,
@@ -235,25 +223,23 @@
               want to feel abandoned by my family anymore.
             </li>
             <li class="list-group-item">
-              2) eliminates majorty of costs and more importantly from my
+               eliminates majorty of costs and more importantly from my
               personal standpoint, headaches.
             </li>
             <li class="list-group-item">
-              3) Potentially, my presence alone will help keep Karl away from
+               Potentially, my presence alone will help keep Karl away from
               Grandma since Karl doesn't seem to care about the implications of
               undue stress his bitchfits have on her and I think most of us have
               her best interest at heart.
             </li>
             <li class="list-group-item">
-              4) Tom and I are well aquainted with living more minimally each
+              Tom and I are well aquainted with living more minimally each
               time we change hotels -- amazing how fast shit disapears. We also
               know how to maintain a our animals in less than 300 sq/ft hotel
-              rooms without being detected by sight or smell, unless, as this
-              happened twice, our room was entered while we were absent
-              (Bismarck tells us).
+              rooms without being detected by sight or smell.
             </li>
             <li class="list-group-item">
-              5) I can attain a sense of safety which was been lost due to the
+               I can attain a sense of safety which was been lost due to the
               aforementioned -- even leaving an hotel now, I feel at risk or
               that I will come back to a tragedy. This is not helping my PTSD. I
               CAN BARELY TOLERATE being alone in the hotel room without Tom,
@@ -262,16 +248,16 @@
               as brave as I used to be.
             </li>
             <li class="list-group-item">
-              6) Tom is in school again because he can attain more certificates
-              (though he doesn't need them imo becasue his work compared to
+              Tom is in school again because he can attain more certificates
+             though he doesn't need them imo becasue his work compared to
               people who have degrees that he doesn't are leages behind him in
-              literlly every capacity) and it is very uplifting for me to be
-              confdent about Tom's abilities because its the truth (this
+              literlly every capacity and it is very uplifting for me to be
+              confdent about Tom's abilities because its the truth(this
               document is code I put together from him teaching me then fixing
-              it when I get mad) and he would be more than excited to give you a
+              it when I get mad and he would be more than excited to give you a
               demonstration of his talents becasue he loves to practice public
-              speaking (one element to why this and many other things take so
-              long to finish -- it's impossible to stop him when he starts). But
+              speaking one element to why this and many other things take so
+              long to finish -- it's impossible to stop him when he starts. But
               moving constantly from hotels and previous issues that were
               exaggerated out of our control would holdback most and being
               somehwere stable where neither of us are reminded constanly of
